[bumpversion]
current_version = 3.4.0

[metadata]
description-file = README.rst

[wheel]
universal = 1

[coverage:run]
branch = true
source = heroku3
data_file = .coverage

[coverage:html]
directory = coverage/html
title = Heroku3 Coverage Report

[coverage:report]
fail_under = 47
precision = 1
skip_covered = true

[tool:pytest]
testpaths = tests/unit

