[bumpversion]
current_version = 4.2.1
commit = True
tag = True

[bumpversion:file:heroku3/__init__.py]

[bumpversion:file:setup.py]
search = https://github.com/martyzz1/heroku3.py/tarball/v{current_version}
replace = https://github.com/martyzz1/heroku3.py/tarball/v{new_version}

[metadata]
description-file = README.rst

[wheel]
universal = 1

[coverage:run]
branch = true
source = heroku3
data_file = .coverage

[coverage:html]
directory = coverage/html
title = Heroku3 Coverage Report

[coverage:report]
fail_under = 47
precision = 1
skip_covered = true

[tool:pytest]
testpaths = tests/unit

[flake8]
ignore = C901,E202,E231,E124,F403,W503,D
max-line-length = 119
max-complexity = 10
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg, */migrations/*
